flutter-bindings/bls_signatures_ffi/lib/src/blschia.h.dart


  late final _fcvt_rPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Double,
              ffi.Int32,
              ffi.Pointer<ffi.Int32>,
              ffi.Pointer<ffi.Int32>,
              ffi.Pointer<ffi.Int8>,
              size_t)>>('fcvt_r');
  late final _fcvt_r = _fcvt_rPtr.asFunction<
      int Function(double, int, ffi.Pointer<ffi.Int32>, ffi.Pointer<ffi.Int32>,
          ffi.Pointer<ffi.Int8>, int)>();

  int mblen(
    ffi.Pointer<ffi.Int8> __s,
    int __n,
  ) {
    return _mblen(
      __s,
      __n,
    );
  }

  late final _mblenPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<ffi.Int8>, size_t)>>('mblen');
  late final _mblen =
      _mblenPtr.asFunction<int Function(ffi.Pointer<ffi.Int8>, int)>();

  int mbtowc(
    ffi.Pointer<wchar_t> __pwc,
    ffi.Pointer<ffi.Int8> __s,
    int __n,
  ) {
    return _mbtowc(
      __pwc,
      __s,
      __n,
    );
  }

  late final _mbtowcPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<wchar_t>, ffi.Pointer<ffi.Int8>, size_t)>>('mbtowc');
  late final _mbtowc = _mbtowcPtr.asFunction<
      int Function(ffi.Pointer<wchar_t>, ffi.Pointer<ffi.Int8>, int)>();

  int wctomb(
    ffi.Pointer<ffi.Int8> __s,
    int __wchar,
  ) {
    return _wctomb(
      __s,
      __wchar,
    );
  }

  late final _wctombPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<ffi.Int8>, wchar_t)>>('wctomb');
  late final _wctomb =
      _wctombPtr.asFunction<int Function(ffi.Pointer<ffi.Int8>, int)>();

  int mbstowcs(
    ffi.Pointer<wchar_t> __pwcs,
    ffi.Pointer<ffi.Int8> __s,
    int __n,
  ) {
    return _mbstowcs(
      __pwcs,
      __s,
      __n,
    );
  }

  late final _mbstowcsPtr = _lookup<
      ffi.NativeFunction<
          size_t Function(ffi.Pointer<wchar_t>, ffi.Pointer<ffi.Int8>,
              size_t)>>('mbstowcs');
  late final _mbstowcs = _mbstowcsPtr.asFunction<
      int Function(ffi.Pointer<wchar_t>, ffi.Pointer<ffi.Int8>, int)>();

  int wcstombs(
    ffi.Pointer<ffi.Int8> __s,
    ffi.Pointer<wchar_t> __pwcs,
    int __n,
  ) {
    return _wcstombs(
      __s,
      __pwcs,
      __n,
    );
  }

  late final _wcstombsPtr = _lookup<
      ffi.NativeFunction<
          size_t Function(ffi.Pointer<ffi.Int8>, ffi.Pointer<wchar_t>,
              size_t)>>('wcstombs');
  late final _wcstombs = _wcstombsPtr.asFunction<
      int Function(ffi.Pointer<ffi.Int8>, ffi.Pointer<wchar_t>, int)>();

  int rpmatch(
    ffi.Pointer<ffi.Int8> __response,
  ) {
    return _rpmatch(
      __response,
    );
  }

  late final _rpmatchPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<ffi.Int8>)>>(
          'rpmatch');
  late final _rpmatch =
      _rpmatchPtr.asFunction<int Function(ffi.Pointer<ffi.Int8>)>();

  int getsubopt(
    ffi.Pointer<ffi.Pointer<ffi.Int8>> __optionp,
    ffi.Pointer<ffi.Pointer<ffi.Int8>> __tokens,
    ffi.Pointer<ffi.Pointer<ffi.Int8>> __valuep,
  ) {
    return _getsubopt(
      __optionp,
      __tokens,
      __valuep,
    );
  }

  late final _getsuboptPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<ffi.Pointer<ffi.Int8>>,
              ffi.Pointer<ffi.Pointer<ffi.Int8>>,
              ffi.Pointer<ffi.Pointer<ffi.Int8>>)>>('getsubopt');
  late final _getsubopt = _getsuboptPtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Pointer<ffi.Int8>>,
          ffi.Pointer<ffi.Pointer<ffi.Int8>>,
          ffi.Pointer<ffi.Pointer<ffi.Int8>>)>();

  int getloadavg(
    ffi.Pointer<ffi.Double> __loadavg,
    int __nelem,
  ) {
    return _getloadavg(
      __loadavg,
      __nelem,
    );
  }

  late final _getloadavgPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<ffi.Double>, ffi.Int32)>>('getloadavg');
  late final _getloadavg =
      _getloadavgPtr.asFunction<int Function(ffi.Pointer<ffi.Double>, int)>();

  int CG1ElementSize() {
    return _CG1ElementSize();
  }

  late final _CG1ElementSizePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function()>>('CG1ElementSize');
  late final _CG1ElementSize = _CG1ElementSizePtr.asFunction<int Function()>();

  CG1Element CG1ElementFromBytes(
    ffi.Pointer<ffi.Void> data,
    ffi.Pointer<ffi.Uint8> didErr,
  ) {
    return _CG1ElementFromBytes(
      data,
      didErr,
    );
  }

  late final _CG1ElementFromBytesPtr = _lookup<
      ffi.NativeFunction<
          CG1Element Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Uint8>)>>('CG1ElementFromBytes');
  late final _CG1ElementFromBytes = _CG1ElementFromBytesPtr.asFunction<
      CG1Element Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Uint8>)>();

  CG1Element CG1ElementGenerator() {
    return _CG1ElementGenerator();
  }

  late final _CG1ElementGeneratorPtr =
      _lookup<ffi.NativeFunction<CG1Element Function()>>('CG1ElementGenerator');
  late final _CG1ElementGenerator =
      _CG1ElementGeneratorPtr.asFunction<CG1Element Function()>();

  bool CG1ElementIsValid(
    CG1Element el,
  ) {
    return _CG1ElementIsValid(
          el,
        ) !=
        0;
  }

  late final _CG1ElementIsValidPtr =
      _lookup<ffi.NativeFunction<ffi.Uint8 Function(CG1Element)>>(
          'CG1ElementIsValid');
  late final _CG1ElementIsValid =
      _CG1ElementIsValidPtr.asFunction<int Function(CG1Element)>();

  int CG1ElementGetFingerprint(
    CG1Element el,
  ) {
    return _CG1ElementGetFingerprint(
      el,
    );
  }

  late final _CG1ElementGetFingerprintPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(CG1Element)>>(
          'CG1ElementGetFingerprint');
  late final _CG1ElementGetFingerprint =
      _CG1ElementGetFingerprintPtr.asFunction<int Function(CG1Element)>();

  bool CG1ElementIsEqual(
    CG1Element el1,
    CG1Element el2,
  ) {
    return _CG1ElementIsEqual(
          el1,
          el2,
        ) !=
        0;
  }

  late final _CG1ElementIsEqualPtr =
      _lookup<ffi.NativeFunction<ffi.Uint8 Function(CG1Element, CG1Element)>>(
          'CG1ElementIsEqual');
  late final _CG1ElementIsEqual =
      _CG1ElementIsEqualPtr.asFunction<int Function(CG1Element, CG1Element)>();

  CG1Element CG1ElementAdd(
    CG1Element el1,
    CG1Element el2,
  ) {
    return _CG1ElementAdd(
      el1,
      el2,
    );
  }

  late final _CG1ElementAddPtr =
      _lookup<ffi.NativeFunction<CG1Element Function(CG1Element, CG1Element)>>(
          'CG1ElementAdd');
  late final _CG1ElementAdd = _CG1ElementAddPtr.asFunction<
      CG1Element Function(CG1Element, CG1Element)>();

  CG1Element CG1ElementMul(
    CG1Element el,
    CPrivateKey sk,
  ) {
    return _CG1ElementMul(
      el,
      sk,
    );
  }

  late final _CG1ElementMulPtr =
      _lookup<ffi.NativeFunction<CG1Element Function(CG1Element, CPrivateKey)>>(
          'CG1ElementMul');
  late final _CG1ElementMul = _CG1ElementMulPtr.asFunction<
      CG1Element Function(CG1Element, CPrivateKey)>();

  CG1Element CG1ElementNegate(
    CG1Element el,
  ) {
    return _CG1ElementNegate(
      el,
    );
  }

  late final _CG1ElementNegatePtr =
      _lookup<ffi.NativeFunction<CG1Element Function(CG1Element)>>(
          'CG1ElementNegate');
  late final _CG1ElementNegate =
      _CG1ElementNegatePtr.asFunction<CG1Element Function(CG1Element)>();

  ffi.Pointer<ffi.Void> CG1ElementSerialize(
    CG1Element el,
  ) {
    return _CG1ElementSerialize(
      el,
    );
  }

  late final _CG1ElementSerializePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Void> Function(CG1Element)>>(
          'CG1ElementSerialize');
  late final _CG1ElementSerialize = _CG1ElementSerializePtr.asFunction<
      ffi.Pointer<ffi.Void> Function(CG1Element)>();

  void CG1ElementFree(
    CG1Element el,
  ) {
    return _CG1ElementFree(
      el,
    );
  }

  late final _CG1ElementFreePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(CG1Element)>>(
          'CG1ElementFree');
  late final _CG1ElementFree =
      _CG1ElementFreePtr.asFunction<void Function(CG1Element)>();

  int CG2ElementSize() {
    return _CG2ElementSize();
  }

  late final _CG2ElementSizePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function()>>('CG2ElementSize');
  late final _CG2ElementSize = _CG2ElementSizePtr.asFunction<int Function()>();

  CG2Element CG2ElementFromBytes(
    ffi.Pointer<ffi.Void> data,
    ffi.Pointer<ffi.Uint8> didErr,
  ) {
    return _CG2ElementFromBytes(
      data,
      didErr,
    );
  }

  late final _CG2ElementFromBytesPtr = _lookup<
      ffi.NativeFunction<
          CG2Element Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Uint8>)>>('CG2ElementFromBytes');
  late final _CG2ElementFromBytes = _CG2ElementFromBytesPtr.asFunction<
      CG2Element Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Uint8>)>();

  CG2Element CG2ElementGenerator() {
    return _CG2ElementGenerator();
  }

  late final _CG2ElementGeneratorPtr =
      _lookup<ffi.NativeFunction<CG2Element Function()>>('CG2ElementGenerator');
  late final _CG2ElementGenerator =
      _CG2ElementGeneratorPtr.asFunction<CG2Element Function()>();

  bool CG2ElementIsValid(
    CG2Element el,
  ) {
    return _CG2ElementIsValid(
          el,
        ) !=
        0;
  }

  late final _CG2ElementIsValidPtr =
      _lookup<ffi.NativeFunction<ffi.Uint8 Function(CG2Element)>>(
          'CG2ElementIsValid');
  late final _CG2ElementIsValid =
      _CG2ElementIsValidPtr.asFunction<int Function(CG2Element)>();

  bool CG2ElementIsEqual(
    CG2Element el1,
    CG2Element el2,
  ) {
    return _CG2ElementIsEqual(
          el1,
          el2,
        ) !=
        0;
  }

  late final _CG2ElementIsEqualPtr =
      _lookup<ffi.NativeFunction<ffi.Uint8 Function(CG2Element, CG2Element)>>(
          'CG2ElementIsEqual');
  late final _CG2ElementIsEqual =
      _CG2ElementIsEqualPtr.asFunction<int Function(CG2Element, CG2Element)>();

  CG2Element CG2ElementAdd(
    CG2Element el1,
    CG2Element el2,
  ) {
    return _CG2ElementAdd(
      el1,
      el2,
    );
  }

  late final _CG2ElementAddPtr =
      _lookup<ffi.NativeFunction<CG2Element Function(CG2Element, CG2Element)>>(
          'CG2ElementAdd');
  late final _CG2ElementAdd = _CG2ElementAddPtr.asFunction<
      CG2Element Function(CG2Element, CG2Element)>();

  CG2Element CG2ElementMul(
    CG2Element el,
    CPrivateKey sk,
  ) {
    return _CG2ElementMul(
      el,
      sk,
    );
  }

  late final _CG2ElementMulPtr =
      _lookup<ffi.NativeFunction<CG2Element Function(CG2Element, CPrivateKey)>>(
          'CG2ElementMul');
  late final _CG2ElementMul = _CG2ElementMulPtr.asFunction<
      CG2Element Function(CG2Element, CPrivateKey)>();

  CG2Element CG2ElementNegate(
    CG2Element el,
  ) {
    return _CG2ElementNegate(
      el,
    );
  }

  late final _CG2ElementNegatePtr =
      _lookup<ffi.NativeFunction<CG2Element Function(CG2Element)>>(
          'CG2ElementNegate');
  late final _CG2ElementNegate =
      _CG2ElementNegatePtr.asFunction<CG2Element Function(CG2Element)>();

  ffi.Pointer<ffi.Void> CG2ElementSerialize(
    CG2Element el,
  ) {
    return _CG2ElementSerialize(
      el,
    );
  }

  late final _CG2ElementSerializePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Void> Function(CG2Element)>>(
          'CG2ElementSerialize');
  late final _CG2ElementSerialize = _CG2ElementSerializePtr.asFunction<
      ffi.Pointer<ffi.Void> Function(CG2Element)>();

  void CG2ElementFree(
    CG2Element el,
  ) {
    return _CG2ElementFree(
      el,
    );
  }

  late final _CG2ElementFreePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(CG2Element)>>(
          'CG2ElementFree');
  late final _CG2ElementFree =
      _CG2ElementFreePtr.asFunction<void Function(CG2Element)>();
